--- a/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
+++ b/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
@@ -247,7 +247,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="500" y="280" width="-1" height="-1"/>
+              <AbsoluteConstraints x="500" y="220" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -398,7 +398,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="60" y="370" width="120" height="40"/>
+              <AbsoluteConstraints x="60" y="390" width="120" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -414,7 +414,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="220" y="370" width="140" height="40"/>
+              <AbsoluteConstraints x="220" y="390" width="140" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -430,7 +430,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="420" y="370" width="120" height="40"/>
+              <AbsoluteConstraints x="420" y="390" width="120" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -446,7 +446,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="600" y="370" width="120" height="40"/>
+              <AbsoluteConstraints x="600" y="390" width="120" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -456,7 +456,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="430" width="800" height="130"/>
+              <AbsoluteConstraints x="20" y="440" width="800" height="130"/>
             </Constraint>
           </Constraints>
 
@@ -751,7 +751,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="590" y="230" width="100" height="-1"/>
+              <AbsoluteConstraints x="610" y="300" width="100" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -764,7 +764,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="370" y="130" width="-1" height="-1"/>
+              <AbsoluteConstraints x="610" y="330" width="110" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -833,11 +833,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Filtro"/>
+            <Property name="text" type="java.lang.String" value="Filtro de busqueda:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="540" y="240" width="-1" height="-1"/>
+              <AbsoluteConstraints x="490" y="300" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -847,7 +847,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="590" y="280" width="180" height="70"/>
+              <AbsoluteConstraints x="590" y="220" width="230" height="70"/>
             </Constraint>
           </Constraints>
 
